--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,11 @@ jobs:
 
       - uses: actions/checkout@master
       - name: Bump version and push tag
-        uses: hennejg/github-tag-action@v4.1.jh1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        uses: Instrument/github-tag-action@v1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
+          BRANCH: master
+          BUMP: major
 
       - name: Push Image
         run: |
