--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,7 @@ jobs:
 
       - name: Push Image
         run: |
-          docker push alhusseinahmed/go-webapp-sample:1 
-          docker push alhusseinahmed/go-webapp-sample:latest
+          docker push alhusseinahmed/go-webapp-sample
 
 
 
