--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Push Image
         run: |
-          docker push alhusseinahmed/go-webapp-sample
+          docker push alhusseinahmed/go-webapp-sample:1
 
 
 
