--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,8 @@ jobs:
           tag_prefix: 'tags'
 
       - name: Use version
-        run: echo "Calculated version: ${{ steps.calculate-version.outputs.version-string }}"
+        run: |
+         echo "Calculated version: ${{ steps.calculate-version.outputs.version-string }}"
 
       - name: Push Image
         run: |
