--- a/.github/workflows/deploy_terraform.yml
+++ b/.github/workflows/deploy_terraform.yml
@@ -26,10 +26,18 @@ jobs:
 
       # Terraform apply
       - name: Terraform Apply
+        id: apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform apply -auto-approve
+        working-directory: ./terraform
+
+      # Get Terraform output
+      - name: Get Terraform Outputs
+        id: outputs
+        run: |
+          echo "::set-output name=http_server_public_dns::$(terraform output -raw http_server_public_dns)"
         working-directory: ./terraform
 
       # Add SSH key to agent
@@ -40,5 +48,8 @@ jobs:
 
       # Run Docker image on EC2
       - name: Run Docker image on EC2
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ steps.terraform.outputs.public_ip }} 'sudo docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && sudo docker run -d pawandevops/cockpit-docker-images:latest'
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ steps.outputs.outputs.http_server_public_dns }} 'sudo docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && sudo docker run -d pawandevops/cockpit-docker-images:latest'
