--- a/.github/workflows/deploy_terraform.yml
+++ b/.github/workflows/deploy_terraform.yml
@@ -20,12 +20,12 @@ jobs:
         env:
           EC2_PUBLIC_IP: ${{ secrets.EC2_HOST }} # Provided as a secret
         run: |
-          ssh -t -o StrictHostKeyChecking=no ec2-user@${EC2_PUBLIC_IP} << 'EOF'
+          ssh -o StrictHostKeyChecking=no ec2-user@${EC2_PUBLIC_IP} << 'EOF'
             # Stop containers with the specified image
-            sudo docker stop $(sudo docker ps -q --filter ancestor=pawandevops/cockpit-docker-images:latest)
+            #sudo docker stop $(sudo docker ps -q --filter ancestor=pawandevops/cockpit-docker-images:latest)
 
             # Remove containers with the specified image
-            sudo docker rm $(sudo docker ps -a -q --filter ancestor=pawandevops/cockpit-docker-images:latest)
+            #sudo docker rm $(sudo docker ps -a -q --filter ancestor=pawandevops/cockpit-docker-images:latest)
 
             # Run new container
             sudo docker run -d -p 8080:8080 pawandevops/cockpit-docker-images:latest
