--- a/.github/workflows/terraciwithsecrets.yml
+++ b/.github/workflows/terraciwithsecrets.yml
@@ -1,4 +1,5 @@
 name: Secrets Terraform Deployment
+
 on:
   push:
     paths:
@@ -13,6 +14,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      # Create the .ssh directory
+      - name: Create .ssh directory
+        run: mkdir -p ~/.ssh
 
       # Create a temporary file for the SSH private key
       - name: Create SSH key file
@@ -39,7 +44,4 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: terraform apply -auto-approve \
-          -var="DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" \
-          -var="DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}" \
-          -var="ssh_private_key_path=~/.ssh/default-ec2.pem"
-        working-directory: ./terraform
+          -var="DOCKER_USERNAME=${{ secrets
