--- a/.github/workflows/terraciwithsecrets.yml
+++ b/.github/workflows/terraciwithsecrets.yml
@@ -1,4 +1,5 @@
 name: Secrets Terraform Deployment
+
 on:
   push:
     paths:
@@ -14,6 +15,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # Debugging: Print working directory and list files
+      - name: Print working directory
+        run: pwd
+
+      - name: List root directory
+        run: ls -la /
+
+      - name: List home directory
+        run: ls -la ~/
+
       # Create the .ssh directory
       - name: Create .ssh directory
         run: mkdir -p ~/.ssh
@@ -26,6 +37,10 @@ jobs:
       - name: Set SSH key file permissions
         run: chmod 600 ~/.ssh/default-ec2.pem
 
+      # Debugging: Verify SSH key file
+      - name: Verify SSH key file
+        run: ls -la ~/.ssh && cat ~/.ssh/default-ec2.pem
+
       # Install Terraform
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
@@ -35,6 +50,10 @@ jobs:
         run: terraform init
         working-directory: ./terraform
 
+      # Debugging: Verify Terraform files
+      - name: List Terraform files
+        run: ls -la ./terraform
+
       # Terraform apply
       - name: Terraform Apply
         env:
@@ -42,5 +61,9 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: terraform apply -auto-approve \
-          -var="DOCKER_USERNAME=${{ secrets
+        run: |
+          terraform apply -auto-approve \
+            -var="DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" \
+            -var="DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}" \
+            -var="ssh_private_key_path=~/.ssh/default-ec2.pem"
+        working-directory: ./terraform
