--- a/.github/workflows/justsemver.yml
+++ b/.github/workflows/justsemver.yml
@@ -1,53 +1,41 @@
-name: Safe CI/CD Pipeline
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      # Configure Git safe directory
-      - name: Create .gitconfig
-        run: echo "[safe]\ndirectory = /github/workspace" > .gitconfig
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       # Log in to Docker Hub
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build Docker image
-      - name: Build Docker image
-        uses: flownative/action-docker-build@master
+      - name: Extract version from tag
+        id: extract_version
+        run: echo "::set-output name=version::${GITHUB_REF#refs/tags/}"
+
+      - name: Set up Docker Build and Push
+        uses: docker/build-push-action@v2
         with:
-          tag_ref: ${{ github.ref }}
-          image_name: docker.pkg.github.com/pawan-tomar/go-webapp-sample/go-webapp-sample
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
-
-      # Publish release to docker.io with semantic versioning
-      - name: Publish release to docker.io
-        uses: flownative/action-docker-publish-semver@master
-        with:
-          tag_ref: ${{ github.ref }}
-          tag_latest: 'yes'
-          tag_custom: 'some-custom-tag'
-
-          source_image_name: docker.pkg.github.com/pawan-tomar/go-webapp-sample/go-webapp-sample
-          source_registry_username: github
-          source_registry_password: ${{ secrets.GITHUB_TOKEN }}
-          source_registry_endpoint: https://docker.pkg.github.com/v2/
-
-          target_image_name: pawandevops/go-webapp-sample
-          target_registry_username: ${{ secrets.DOCKER_USERNAME }}
-          target_registry_password: ${{ secrets.DOCKER_PASSWORD }}
-          target_registry_endpoint: https://index.docker.io/v1/
+          context: .
+          file: ./path/to/Dockerfile
+          push: true
+          tags: |
+            pawandevops/cockpit-docker-images:${{ steps.extract_version.outputs.version }}
+            pawandevops/cockpit-docker-images:latest
