--- a/.github/workflows/justsemver.yml
+++ b/.github/workflows/justsemver.yml
@@ -2,68 +2,64 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-    # Set up Go environment
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.22.3
-
-    # Install dependencies
-    - name: Install dependencies
-      run: go mod download
-
-    # Run tests (assuming you have tests defined)
-    - name: Run tests
-      run: go test ./...
+      # Your test steps here...
 
   build:
     runs-on: ubuntu-latest
-    #needs: [ test ]
+    needs: [test]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-    # Log in to Docker Hub
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      # Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Extract version from tag
-    - name: Extract version from tag
-      id: extract_version
-      run: echo "::set-output name=version::${GITHUB_REF#refs/tags/}"
+      # Fetch tags
+      - name: Fetch tags
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
-    # Determine semantic version tag
-    - name: Set semantic version
-      id: semver
-      run: |
-        VERSION=$(date +'%Y.%m.%d.%H%M%S')
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+      # Get latest tag
+      - name: Get latest tag
+        id: latest_tag
+        run: echo "::set-output name=tag::$(git describe --tags $(git rev-list --tags --max-count=1))"
 
-    # Build and push Docker image
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: |
-          docker.io/pawandevops/cockpit-docker-images:latest
-          docker.io/pawandevops/cockpit-docker-images:${{ steps.extract_version.outputs.version }}
-          docker.io/pawandevops/cockpit-docker-images:${{ env.VERSION }}
+      # Determine semantic version tag
+      - name: Set semantic version
+        id: semver
+        run: echo "::set-output name=version::${GITHUB_REF#refs/tags/}"
 
-    # Tag Docker image in GitHub repository
-    - name: Tag Docker image in GitHub repository
-      run: docker tag pawandevops/cockpit-docker-images:${{ steps.extract_version.outputs.version }} docker.pkg.github.com/${{ github.repository }}/pawandevops/cockpit-docker-images:${{ steps.extract_version.outputs.version }}
+      # If there's no tag associated with the commit, use the latest tag available in the GitHub repository
+      - if: steps.semver.outputs.version == ''
+        run: echo "::set-output name=version::${{ steps.latest_tag.outputs.tag }}"
+
+      # Build and push Docker image
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./path/to/Dockerfile
+          push: true
+          tags: |
+            docker.io/pawandevops/cockpit-docker-images:latest
+            docker.io/pawandevops/cockpit-docker-images:${{ steps.semver.outputs.version }}
+
+      # Tag Docker image in GitHub repository
+      - name: Tag Docker image in GitHub repository
+        run: |
+          docker tag pawandevops/cockpit-docker-images:${{ steps.semver.outputs.version }} docker.pkg.github.com/${{ github.repository }}/pawandevops/cockpit-docker-images:${{ steps.semver.outputs.version }}
