--- a/.github/workflows/justsemver.yml
+++ b/.github/workflows/justsemver.yml
@@ -18,7 +18,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [test]
+    #needs: [test]
 
     steps:
       - uses: actions/checkout@v2
