--- a/.github/workflows/justsemver.yml
+++ b/.github/workflows/justsemver.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
+    tags: []
 
 jobs:
   test:
@@ -18,7 +16,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    #needs: [test]
+    needs: [test]
 
     steps:
       - uses: actions/checkout@v2
@@ -39,7 +37,7 @@ jobs:
         id: latest_tag
         run: echo "::set-output name=tag::$(git describe --tags $(git rev-list --tags --max-count=1))"
 
-            # Determine semantic version tag
+      # Determine semantic version tag
       - name: Set semantic version
         id: semver
         run: |
@@ -47,25 +45,17 @@ jobs:
           VERSION=${GITHUB_REF#refs/tags/}
           echo "::set-output name=version::$VERSION"
 
-
-     #  If there's no tag associated with the commit, use the latest tag available in the GitHub repository
+      # If there's no tag associated with the commit, use the latest tag available in the GitHub repository
       - if: steps.semver.outputs.version == ''
         run: echo "::set-output name=version::${{ steps.latest_tag.outputs.tag }}"
-    
 
-
-      # Build and push Docker image
+      # Build and push Docker image using docker/build-push-action
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./path/to/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: |
             docker.io/pawandevops/cockpit-docker-images:latest
             docker.io/pawandevops/cockpit-docker-images:${{ steps.semver.outputs.version }}
-
-      # Tag Docker image in GitHub repository
-      - name: Tag Docker image in GitHub repository
-        run: |
-          docker tag pawandevops/cockpit-docker-images:${{ steps.semver.outputs.version }} docker.pkg.github.com/${{ github.repository }}/pawandevops/cockpit-docker-images:${{ steps.semver.outputs.version }}
