--- a/.github/workflows/terraformcicd.yml
+++ b/.github/workflows/terraformcicd.yml
@@ -32,9 +32,18 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       # Terraform init
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform
+      - name: Terraform init
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          #DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          #DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          terraform init  \
+            #-var="DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" \
+            #-var="DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}" \
+            #-var="ssh_private_key_path=~/.ssh/default-ec2.pem"
+        working-directory: ./terraformm
 
       # Terraform apply
       - name: Terraform Apply
