--- a/.github/workflows/terraformcicd.yml
+++ b/.github/workflows/terraformcicd.yml
@@ -36,13 +36,10 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          #DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          #DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          terraform init  \
-            #-var="DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" \
-            #-var="DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}" \
-            #-var="ssh_private_key_path=~/.ssh/default-ec2.pem"
+         
+        run: terraform init
+            
+            
         working-directory: ./terraformm
 
       # Terraform apply
