--- a/.github/workflows/terraformcicd.yml
+++ b/.github/workflows/terraformcicd.yml
@@ -36,11 +36,8 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         
         run: terraform init
-            
-            
-        working-directory: ./terraformm
+        working-directory: ./terraform
 
       # Terraform apply
       - name: Terraform Apply
