--- a/.github/workflows/terraformcicd.yml
+++ b/.github/workflows/terraformcicd.yml
@@ -9,9 +9,34 @@ on:
       - 'terraform/**'
 
 jobs:
-  terraform:
+  validate:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
+      # Install Terraform
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      # Terraform init - Required to initialize backend and providers
+      - name: Terraform init
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform init
+        working-directory: ./terraform
+
+      # Terraform validate - Ensure configuration is valid
+      - name: Terraform Validate
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform validate
+        working-directory: ./terraform
+
+  apply:
+    runs-on: ubuntu-latest
+    needs: validate
     steps:
       - uses: actions/checkout@v3
 
@@ -31,7 +56,7 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
 
-      # Terraform init
+      # Terraform init - Required again to ensure state is up-to-date and modules are downloaded
       - name: Terraform init
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -39,7 +64,7 @@ jobs:
         run: terraform init
         working-directory: ./terraform
 
-      # Terraform apply
+      # Terraform apply - Apply the validated configuration
       - name: Terraform Apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
